# sound_compression

./: CMakeLists.txt  README.md  compress.cpp  compress.h  dct.cpp  dct.h  handle_wav.cpp  handle_wav.h  main.cpp
